--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,55 @@ body {
   color: #0a0a0a;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@keyframes move1 {
+  0% {
+    transform: translate(0) rotate(0);
+  }
+
+  25% {
+    transform: translate(20px, -10px) rotate(5deg);
+  }
+
+  50% {
+    transform: translate(30px, 20px) rotate(0);
+  }
+
+  75% {
+    transform: translate(10px, 30px) rotate(-5deg);
+  }
+
+  100% {
+    transform: translate(0) rotate(0);
+  }
+}
+
+@keyframes move2 {
+  0% {
+    transform: translate(0) rotate(0);
+  }
+
+  25% {
+    transform: translate(-40px, -15px) rotate(-5deg);
+  }
+
+  50% {
+    transform: translate(-50px, -20px) rotate(0);
+  }
+
+  75% {
+    transform: translate(-20px, -35px) rotate(5deg);
+  }
+
+  100% {
+    transform: translate(0) rotate(0);
+  }
+}
+
+.animate-move1 {
+  animation: move1 12s ease-in-out infinite alternate;
+}
+
+.animate-move2 {
+  animation: move2 8s ease-in-out infinite alternate;
+}
